# chat-websockets

./: Cargo.toml  README.md  schema.sql
src/: main.rs
src/controller/: auth.rs  controller.rs  frontend.rs  message.rs  mod.rs  register.rs  room.rs
src/entity/: account.rs  message.rs  mod.rs  request_data.rs  room.rs  session.rs  template.rs
src/repository/: account.rs  mod.rs  room.rs  session.rs
src/utils/: http_helper.rs  mod.rs  utils.rs
static/: helper.js  index.css  index.js  layout.css  layout.js  login.css  login.js  refreshAccountData.js  register.css  register.js  room.css  room.js
templates/: index.html  layout.html  login.html  register.html  room.html
