[package]
name = "chat-websockets"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"
futures-util = "0.3.31"
askama = "0.12"
lazy_static = "1.5.0"
serde = { version = "1.0.215", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
sha2 = "0.11.0-pre.4"
constant_time_eq = "0.3.1"
serde_urlencoded = "0.7.1"
serde_json = "1.0.133"
chrono = "0.4.38"
once_cell = "1.20.2"